Updated Sidebar, Google Analytics, Page Title, Security & Assessibility
503,994,1012,1016,950,1003,976,996-1010,642,1014,1018,1040,1041,1042

--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -3,7 +3,7 @@
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
 
 {% block pageTitle %}
-  GOV.UK - Defra grants
+  {{siteTitle}}
 {% endblock %}
 
 {% block head %}
