--- a/app/templates/404.njk
+++ b/app/templates/404.njk
@@ -1,6 +1,6 @@
 {% extends '.layout.njk' %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Page not found 
+  {{siteTitle}} - Page not found 
 {% endblock %}
 
 {% block content %}
