--- a/app/templates/applying.njk
+++ b/app/templates/applying.njk
@@ -6,7 +6,7 @@
 {% from "./components/macro.njk" import crumbToken %}
 
 {% block pageTitle %}
-  GOV.UK - Defra grants - Who is applying
+  {{siteTitle}} - Who is applying
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
