--- a/app/templates/business-details.njk
+++ b/app/templates/business-details.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Business details 
+  {{siteTitle}} - Business details 
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
