--- a/app/templates/check-details.njk
+++ b/app/templates/check-details.njk
@@ -3,7 +3,7 @@ z{% extends '.layout.njk' %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Check details
+  {{siteTitle}} - Check details
 {% endblock %}
 
 {% block beforeContent %}
