--- a/app/templates/login.njk
+++ b/app/templates/login.njk
@@ -5,7 +5,7 @@
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Login
+  {{siteTitle}} - Login
 {% endblock %}
 {% block content %}
   <div class="govuk-grid-row">
