--- a/app/templates/not-eligible.njk
+++ b/app/templates/not-eligible.njk
@@ -2,7 +2,7 @@
 
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - You cannot apply for grant
+  {{siteTitle}} - You cannot apply for grant
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
