--- a/app/templates/project-cost.njk
+++ b/app/templates/project-cost.njk
@@ -8,7 +8,7 @@
 
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Project cost
+  {{siteTitle}} - Project cost
 {% endblock %}7
 
 {% block beforeContent %}
