--- a/app/templates/score.njk
+++ b/app/templates/score.njk
@@ -4,7 +4,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Score
+  {{siteTitle}} - Score
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
