--- a/app/templates/500.njk
+++ b/app/templates/500.njk
@@ -1,6 +1,6 @@
 {% extends '.layout.njk' %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Problem with service 
+  {{siteTitle}} - Problem with service 
 {% endblock %}
 
 {% block content %}
