--- a/app/templates/accessibility.njk
+++ b/app/templates/accessibility.njk
@@ -1,6 +1,6 @@
 {% extends ".layout.njk" %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Accessibility statement
+  {{siteTitle}} - Accessibility statement
 {% endblock %}
 {% block content %}
   <div class="govuk-grid-row">
