--- a/app/templates/components/macro.njk
+++ b/app/templates/components/macro.njk
@@ -2,3 +2,16 @@
   <input type="hidden" name="crumb" id="crumb"
          value="{{ crumb }}"  autocomplete="off" />
 {% endmacro %}
+{% macro sideBar(heading, para, items) %}
+ <div style="padding-top: 10px;border-top: 2px solid #1d70b8;">
+        <h2 class="govuk-heading-m" id="subsection-title">
+          {{ heading }}
+        </h2>        
+          <p>{{para  | striptags(true) | escape | nl2br }}</p>
+            <ul class="govuk-list govuk-list--bullet">
+              {% for item in items %}
+                <li>{{ item }}</li>
+              {% endfor %}
+            </ul>
+      </div>
+{% endmacro %}
