--- a/app/templates/confirmation.njk
+++ b/app/templates/confirmation.njk
@@ -3,7 +3,7 @@
 {% from "govuk/components/panel/macro.njk" import govukPanel %}
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Reference 
+  {{siteTitle}} - Reference 
 {% endblock %}
 {% block content %}
   {{ govukPanel(output) }}
