--- a/app/templates/contact-details.njk
+++ b/app/templates/contact-details.njk
@@ -5,7 +5,7 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "./components/macro.njk" import crumbToken %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - {{ heading }}
+  {{siteTitle}} - {{ heading }}
 {% endblock %}
 
 {% block beforeContent %}
