--- a/app/templates/farming-type.njk
+++ b/app/templates/farming-type.njk
@@ -3,10 +3,10 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
-{% from "./components/macro.njk" import crumbToken %}
+{% from "./components/macro.njk" import crumbToken, sideBar %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Farming type  
+  {{siteTitle}} - Farming type  
 {% endblock %}
 
 {% block beforeContent %}
@@ -28,19 +28,12 @@
       </form>
     </div>
     <div class="govuk-grid-column-one-third  govuk-body">
-      <div class="gem-c-contextual-sidebar">
-        <div class="gem-c-related-navigation">
-          <h2>
-            Eligibility
-          </h2>
-          <p>This grant is for:</p>
-            <ul class="govuk-list govuk-list--bullet">
-                <li>arable and horticultural farming businesses supplying the food industry</li>
-                <li>nurseries growing flowers</li>
-                <li>forestry nurseries</li>
-            </ul>
-        </div>
-      </div>
+    {{ sideBar("Eligibility","This grant is for:",
+    [
+      "arable and horticultural farming businesses supplying the food industry",
+      "nurseries growing flowers",
+      "forestry nurseries"
+    ]) }}
     </div>
   </div>
 {% endblock %}
