--- a/app/templates/grant.njk
+++ b/app/templates/grant.njk
@@ -9,7 +9,7 @@
 
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Potential funding
+  {{siteTitle}} - Potential funding
 {% endblock %}
 
 {% block beforeContent %}
