--- a/app/templates/home.njk
+++ b/app/templates/home.njk
@@ -5,7 +5,7 @@
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Start
+  {{siteTitle}} - Start
 {% endblock %}
 {% block beforeContent %}
   {{ govukBreadcrumbs({
