--- a/app/templates/maybe-eligible.njk
+++ b/app/templates/maybe-eligible.njk
@@ -5,7 +5,7 @@
 {% from "./components/macro.njk" import crumbToken %}
 
 {% block pageTitle %}
-  GOV.UK - Defra grants - Tenancy agreement  
+  {{siteTitle}} - Tenancy agreement  
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
