--- a/app/templates/model-farmer-agent-address-details.njk
+++ b/app/templates/model-farmer-agent-address-details.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/select/macro.njk" import govukSelect %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - {{ pageHeader }} 
+  {{siteTitle}} - {{ pageHeader }} 
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
