--- a/app/templates/model-farmer-agent-contact-details.njk
+++ b/app/templates/model-farmer-agent-contact-details.njk
@@ -5,7 +5,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - {{ pageHeader }} 
+  {{siteTitle}} - {{ pageHeader }} 
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
