--- a/app/templates/not-found.njk
+++ b/app/templates/not-found.njk
@@ -3,7 +3,7 @@
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Page not found 
+  {{siteTitle}} - Page not found 
 {% endblock %}
 {% block beforeContent %}
   {{ govukBreadcrumbs({
