--- a/app/templates/service-unavailable.njk
+++ b/app/templates/service-unavailable.njk
@@ -2,7 +2,7 @@
 
 {% set mainClasses = "govuk-main-wrapper--auto-spacing" %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Service unavailable 
+  {{siteTitle}} - Service unavailable 
 {% endblock %}
 {% block content %}
   <div class="govuk-grid-row">
