--- a/app/templates/tenancy-length.njk
+++ b/app/templates/tenancy-length.njk
@@ -4,9 +4,9 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
-{% from "./components/macro.njk" import crumbToken %}
+{% from "./components/macro.njk" import crumbToken, sideBar %}
 {% block pageTitle %}
-  GOV.UK - Defra grants - Tenancy length 
+  {{siteTitle}} - Tenancy length 
 {% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
@@ -25,6 +25,10 @@
           text: "Continue"
         }) }}
       </form>
+    </div>
+    <div class="govuk-grid-column-one-third  govuk-body">
+    {{ sideBar("Eligibility","The land must be owned or have a tenancy in place until 2026 before starting the project.",
+    []) }}
     </div>
   </div>
 {% endblock %}
