--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -1,7 +1,7 @@
 {% extends "govuk/template.njk" %}
 {% from "govuk/components/header/macro.njk" import govukHeader %}
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-
+{% set siteTitle = "Check if you can apply for a Farming Transformation Fund water grant" %}
 {% block pageTitle %}
   {{siteTitle}}
 {% endblock %}
