--- a/app/templates/SSSI.njk
+++ b/app/templates/SSSI.njk
@@ -4,6 +4,9 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "./components/macro.njk" import crumbToken %}
+{% block pageTitle %}
+  {{siteTitle}} - SSSI
+{% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
