--- a/app/templates/abstraction-licence.njk
+++ b/app/templates/abstraction-licence.njk
@@ -4,8 +4,10 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
-{% from "./components/macro.njk" import crumbToken %}
-
+{% from "./components/macro.njk" import crumbToken, sideBar %}
+{% block pageTitle %}
+  {{siteTitle}} - Abstraction licence
+{% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
@@ -19,17 +21,14 @@
       <form method="POST" action="./abstraction-licence" autocomplete="off" novalidate>
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
-
-        {{ govukDetails({
-            summaryText: "Help",
-            html: '<p>Any abstraction licences or variations required must be in place to submit a full application.</p>'
-           })
-        }}
-
         {{ govukButton({
           text: "Continue"
         }) }}
       </form>
+    </div>
+    <div class="govuk-grid-column-one-third  govuk-body">
+    {{ sideBar("Eligibility","Any abstraction licences or variations must be in place by 31 December 2021 (the end of the application window).",
+    []) }}
     </div>
   </div>
 {% endblock %}
