--- a/app/templates/applying.njk
+++ b/app/templates/applying.njk
@@ -5,6 +5,9 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "./components/macro.njk" import crumbToken %}
 
+{% block pageTitle %}
+  {{siteTitle}} - Who is applying
+{% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
