--- a/app/templates/confirmation.njk
+++ b/app/templates/confirmation.njk
@@ -2,7 +2,9 @@
 
 {% from "govuk/components/panel/macro.njk" import govukPanel %}
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
-
+{% block pageTitle %}
+  {{siteTitle}} - Reference 
+{% endblock %}
 {% block content %}
   {{ govukPanel(output) }}
 <div class="govuk-width-container">
@@ -39,4 +41,21 @@
     </div>
   </div>
   <p class="govuk-body"><a href={{ output.surveyLink }} target="_blank" rel="noopener noreferrer">What do you think of this service?</a></p>
+
+{% if googleTagManagerKey %}
+
+<!-- Google Tag Manager -->
+<script>
+dataLayer.push(
+    {
+      pageCategory: 'Journey',
+      event: 'journey-confirmation',
+      time: Date.now(),
+      correlationId:"{{output.confirmationId}}",
+      metric3:Date.now(),
+      dimension2: "{{output.confirmationId}}"
+    });
+</script>
+<!-- End Google Tag Manager -->
+{% endif %}
 {% endblock %}
