--- a/app/templates/farming-type.njk
+++ b/app/templates/farming-type.njk
@@ -3,7 +3,11 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
-{% from "./components/macro.njk" import crumbToken %}
+{% from "./components/macro.njk" import crumbToken, sideBar %}
+{% from "govuk/components/details/macro.njk" import govukDetails %}
+{% block pageTitle %}
+  {{siteTitle}} - Farming type  
+{% endblock %}
 
 {% block beforeContent %}
   {{ govukBackLink({
@@ -22,6 +26,14 @@
           text: "Continue"
         }) }}
       </form>
+    </div>
+    <div class="govuk-grid-column-one-third  govuk-body">
+    {{ sideBar("Eligibility","This grant is for:",
+    [
+      "arable and horticultural farming businesses supplying the food industry",
+      "nurseries growing flowers",
+      "forestry nurseries"
+    ]) }}
     </div>
   </div>
 {% endblock %}
