--- a/app/templates/login.njk
+++ b/app/templates/login.njk
@@ -4,11 +4,13 @@
 {% from "govuk/components/error-message/macro.njk" import govukErrorMessage %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "./components/macro.njk" import crumbToken %}
-
+{% block pageTitle %}
+  {{siteTitle}} - Login
+{% endblock %}
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds govuk-body">
-      <h1 class="govuk-heading-l">Check if you can apply for a Farming Transformation Fund water grant</h1>
+      <h1 class="govuk-heading-l">Check if you can apply for a Farming Transformation Fund water management grant</h1>
 
       {% if errorMessage %}
         {{ govukErrorMessage({
