--- a/app/templates/404.njk
+++ b/app/templates/404.njk
@@ -1,4 +1,7 @@
 {% extends '.layout.njk' %}
+{% block pageTitle %}
+  {{siteTitle}} - Page not found 
+{% endblock %}
 
 {% block content %}
   <div class="govuk-width-container">
