--- a/app/templates/business-details.njk
+++ b/app/templates/business-details.njk
@@ -5,7 +5,9 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "./components/macro.njk" import crumbToken %}
-
+{% block pageTitle %}
+  {{siteTitle}} - Business details 
+{% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
