--- a/app/templates/confirm.njk
+++ b/app/templates/confirm.njk
@@ -4,7 +4,9 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 {% from "./components/macro.njk" import crumbToken %}
-
+{% block pageTitle %}
+  {{siteTitle}} - Confirm 
+{% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
@@ -67,4 +69,12 @@
     </div>
   </div>
 
+{% if googleTagManagerKey %}
+
+<!-- Google Tag Manager -->
+<script>
+dataLayer.push({dimension3:'GDPR accepted'});
+</script>
+<!-- End Google Tag Manager -->
+{% endif %}
 {% endblock %}
