--- a/app/templates/maybe-eligible.njk
+++ b/app/templates/maybe-eligible.njk
@@ -4,6 +4,9 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "./components/macro.njk" import crumbToken %}
 
+{% block pageTitle %}
+  {{siteTitle}} - Tenancy agreement  
+{% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
