--- a/app/templates/model-farmer-agent-address-details.njk
+++ b/app/templates/model-farmer-agent-address-details.njk
@@ -5,7 +5,9 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/select/macro.njk" import govukSelect %}
-
+{% block pageTitle %}
+  {{siteTitle}} - {{ pageHeader }} 
+{% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
