--- a/app/templates/model-farmer-agent-contact-details.njk
+++ b/app/templates/model-farmer-agent-contact-details.njk
@@ -4,8 +4,9 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
-
-
+{% block pageTitle %}
+  {{siteTitle}} - {{ pageHeader }} 
+{% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
