--- a/app/templates/project-items.njk
+++ b/app/templates/project-items.njk
@@ -5,6 +5,9 @@
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "./components/macro.njk" import crumbToken %}
+{% block pageTitle %}
+  {{siteTitle}} - Project items
+{% endblock %}
 
 {% block beforeContent %}
   {{ govukBackLink({
