--- a/app/templates/project-start.njk
+++ b/app/templates/project-start.njk
@@ -4,7 +4,10 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
-{% from "./components/macro.njk" import crumbToken %}
+{% from "./components/macro.njk" import crumbToken, sideBar %}
+{% block pageTitle %}
+  {{siteTitle}} - Project start
+{% endblock %}
 
 {% block beforeContent %}
   {{ govukBackLink({
@@ -19,23 +22,18 @@
       <form method="POST" action="./project-start" autocomplete="off" novalidate>
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
-
-        {{ govukDetails({
-            summaryText: "Help",
-            html:
-            '<p>Starting the project or committing to any costs (such as placing orders) before you receive a funding agreement will invalidate your application.</p>
-            <p>Before you start the project, you can:</p>
-            <ul class="govuk-list govuk-list--bullet">
-                <li>get quotes from suppliers</li>
-                <li>apply for planning permission or an abstraction licence</li>
-            </ul>'
-           })
-        }}
-
         {{ govukButton({
           text: "Continue"
         }) }}
       </form>
+    </div>
+    <div class="govuk-grid-column-one-third  govuk-body">
+    {{ sideBar("Eligibility","You will invalidate your application if you start the project or commit to any costs (such as placing orders) before you receive a funding agreement.
+\nBefore you start the project, you can:",
+    [
+      "get quotes from suppliers",
+      "apply for planning permission or an abstraction licence (these can take a long time)"
+    ]) }}
     </div>
   </div>
 {% endblock %}
