--- a/app/templates/score.njk
+++ b/app/templates/score.njk
@@ -3,8 +3,9 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "./components/macro.njk" import crumbToken %}
-
-
+{% block pageTitle %}
+  {{siteTitle}} - Score
+{% endblock %}
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
@@ -94,5 +95,21 @@
     </form>
   </div>
 </div>
+{% endif %}
+{% if googleTagManagerKey %}
+
+<!-- Google Tag Manager -->
+<script>
+dataLayer.push(
+    {
+      pageCategory: 'Journey',
+      event: 'journey-score',
+      time: Date.now(),
+      score:"{{scoreData.desirability.overallRating.band}}",
+      metric2: Date.now(),
+      dimension1:"{{scoreData.desirability.overallRating.band}}"
+    });
+</script>
+<!-- End Google Tag Manager -->
 {% endif %}
 {% endblock %}
