--- a/app/templates/tenancy.njk
+++ b/app/templates/tenancy.njk
@@ -4,7 +4,10 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
-{% from "./components/macro.njk" import crumbToken %}
+{% from "./components/macro.njk" import crumbToken, sideBar %}
+{% block pageTitle %}
+  {{siteTitle}} - Tenancy
+{% endblock %}
 
 {% block beforeContent %}
   {{ govukBackLink({
@@ -23,6 +26,9 @@
           text: "Continue"
         }) }}
       </form>
+    </div>
+    <div class="govuk-grid-column-one-third  govuk-body">
+    {{ sideBar("Eligibility","The land must be owned or have a tenancy in place until 2026 before starting the project.",[]) }}
     </div>
   </div>
 {% endblock %}
