--- a/app/templates/accessibility.njk
+++ b/app/templates/accessibility.njk
@@ -15,7 +15,6 @@
       <p class="govuk-body">
         This service is run by the Rural Payments Agency (RPA). We want as many people as possible to be able to use this website. For example, that means you should be able to:
         <ul class="govuk-list govuk-list--bullet">
-          <li>change colours, contrast levels and fonts </li>
           <li> change colours, contrast levels and fonts </li>
           <li> zoom in up to 300% without the text spilling off the screen </li>
           <li> navigate most of the service using just a keyboard </li>
@@ -27,7 +26,7 @@
       </p>
       <p class="govuk-body"> 
         <a href="https://mcmw.abilitynet.org.uk/">
-          AbilityNet </a> has advice on making your device easier to use if you have a disability.
+          AbilityNet</a> has advice on making your device easier to use if you have a disability.
       </p>
       <h2 class="govuk-heading-m">How accessible this service is</h2>
       <h2 class="govuk-heading-m">We know some parts of this website are not fully accessible:</h2>
@@ -46,7 +45,7 @@
         <li> call 0300 0200 301 and follow the options for the Farming Transformation Fund scheme </li>
       </ul>
       <p class="govuk-body">We’ll consider your request and get back to you in 10 days.</p>
-      <p class="govuk-body">Reporting accessibility problems with this service</p>
+      <h2 class="govuk-heading-m">Reporting accessibility problems with this service</h2>
       <p class="govuk-body">We’re always looking to improve the accessibility of this service. If you find any problems not listed on this page or think we’re not meeting accessibility requirements:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li> email <a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></li>
@@ -60,7 +59,7 @@
       <h2 class="govuk-heading-l">Contacting us by phone or visiting us in person<h2>
       <p class="govuk-body">
         We provide a text relay service for people who are D/deaf, hearing impaired or have a speech impediment.<br/> <br/>
-        Our offices have audio induction loops, or if you contact us before your visit we can arrange a British Sign Language (BSL) interpreter.<br/>
+        Our offices have audio induction loops, or if you contact us before your visit we can arrange a British Sign Language (BSL) interpreter.<br/><br/>
         To contact us:
       </p>
       <ul class="govuk-list govuk-list--bullet">
