--- a/app/templates/project-cost.njk
+++ b/app/templates/project-cost.njk
@@ -4,7 +4,7 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
-{% from "./components/macro.njk" import crumbToken %}
+{% from "./components/macro.njk" import crumbToken, sideBar  %}
 
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% block pageTitle %}
@@ -29,13 +29,9 @@
         }) }}
       </form>
     </div>
-
-    <div class="govuk-grid-column-one-third">
-      <h4 class="govuk-heading-m">Items selected</h4>
-      <ul class="govuk-list govuk-list--bullet">
-        {% for item in projectItemsList %}
-          <li>{{ item }}</li>
-        {% endfor %}
+        <div class="govuk-grid-column-one-third  govuk-body">
+          {{ sideBar("Items selected","",projectItemsList) }}
+    </div>
       </ul>
     </div>
   </div>
