text and button update

--- a/app/templates/collaboration.njk
+++ b/app/templates/collaboration.njk
@@ -21,7 +21,7 @@
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
         {{ govukButton({
-          text: "Continue"
+          text: "Get your score"
         }) }}
       </form>
     </div>
