--- a/app/templates/confirmation.njk
+++ b/app/templates/confirmation.njk
@@ -12,7 +12,7 @@
      <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds  govuk-body">
           <p>You will get an email with a record of your answers.</p> 
-          <p>If you do not get an email within 72 hours, please call the RPA helpline:</p> 
+          <p>If you do not get an email within 72 hours, please call the RPA helpline and follow the options for the Farming Transformation Fund scheme:</p> 
           <p>Telephone: <b>03000 200 301</b></p> 
           <p>Monday to Friday, 9am to 5pm (except public holidays)</p> 
           <p><a target="_blank" href="https://www.gov.uk/call-charges">Find out about call charges</a></p> 
