--- a/app/templates/score.njk
+++ b/app/templates/score.njk
@@ -38,7 +38,7 @@
   <div class="govuk-grid-column-full">
     <br>
     <h1 class="govuk-heading-l">Your answers</h1>
-    <p>You can go through the checker as many times as you like. Once you’re happy that your answers accurately reflect your project, add your contact details.</p>
+    <p>You can go back through the checker as many times as you like but you can only submit your details once. Once you’re happy that your answers accurately reflect your project, add your contact details.</p>
   <table class="govuk-table">
     <thead class="govuk-table__head">
         <tr class="govuk-table__row">
