--- a/app/templates/500.njk
+++ b/app/templates/500.njk
@@ -7,12 +7,16 @@
   <div class="govuk-width-container">
     <div class="govuk-main-wrapper--auto-spacing">
       <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
+        <div class="govuk-grid-column-two-thirds govuk-body">
           <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
-          <p class="govuk-body">Try again later.</p>
-          <p class="govuk-body">We have not saved your answers. When the service is available, you will have to start again.</p>
-          <p class="govuk-body">Contact the RPA Helpline if you have any questions.</p>
-          <p class="govuk-body">Telephone: 03000 200 301</p>
+          <p>Try again later.</p>
+          <p>We have not saved your answers. When the service is available, you will have to start again.</p>
+          <h2 class="govuk-heading-s">RPA Helpline</h2> 
+          <p>Contact the RPA Helpline if you have any questions and follow the options for the Farming Transformation Fund scheme.</p>
+          <p >Telephone: 03000 200 301<br/><br/>
+            Monday to Friday, 9am to 5pm (except public holidays)<br/>
+            <a target="_blank" href="https://www.gov.uk/call-charges">Find out about call charges</a></p>
+          <p>Email: <a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
         </div>
       </div>
     </div>
