--- a/app/templates/potential-amount.njk
+++ b/app/templates/potential-amount.njk
@@ -22,7 +22,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="./grant" autocomplete="off" novalidate>
+      <form method="POST" action="./potential-amount" autocomplete="off" novalidate>
         {{ crumbToken(crumb)}}
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <h1 class="govuk-fieldset__heading">Potential grant funding</h1>
