--- a/app/templates/components/macro.njk
+++ b/app/templates/components/macro.njk
@@ -6,7 +6,7 @@
 {% endmacro %}
 
 {% macro sideBar(heading, para, items) %}
-  <div class="govuk-grid-column-one-third  govuk-body">
+  <div class="govuk-grid-column-one-third  govuk-!-padding-top-4 govuk-body">
   <hr class="sideBarColor"/>
         <h2 class="govuk-heading-m" id="subsection-title">
           {{ heading }}
