--- a/app/templates/irrigation-water-source.njk
+++ b/app/templates/irrigation-water-source.njk
@@ -1,10 +1,9 @@
 {% extends '.layout.njk' %}
 
-{% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
-{% from "./components/macro.njk" import crumbToken, sideBar %}
+{% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons%}
 {% block pageTitle %}
   {{siteTitle}} - Irrigation water
 {% endblock %}
@@ -28,16 +27,12 @@
         {{ crumbToken(crumb)}}
         {{ govukCheckboxes(waterSourceCurrent) }}
         {{ govukCheckboxes(waterSourcePlanned) }}
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+        {{ conditionalButtons(hasScore) }}
       </form>
     </div>
-    <div class="govuk-grid-column-one-third  govuk-body">
     {{ sideBar("Funding priorities","RPA wants to fund projects that:",
     [
       "improve the environment","improve water sustainability"
     ]) }}
-    </div>
   </div>
 {% endblock %}
